<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_default16"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default16"
            android:hint="@string/hint_nombre"
            app:helperText="@string/help_requirido"
            app:startIconDrawable="@drawable/ic_person"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="@integer/nombre_max_length"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/etApellidos"
                />



        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default16"
            android:hint="@string/hint_apellidos"
            app:helperText="@string/help_requirido"
            app:startIconDrawable="@drawable/ic_person_apellidos"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="@integer/nombre_max_length"
                />



        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/padding_default16"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHeight"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_min"
                android:layout_weight="40"
                android:hint="@string/hint_estatura"
                app:helperText="@string/helper_minestatura"
                app:startIconDrawable="@drawable/ic_height_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="@integer/height_max_length"
                    android:nextFocusForward="@id/etLugarNacimiento" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:layout_marginStart="@dimen/padding_min"
                android:hint="@string/hint_fechadenacimiento"
                app:startIconDrawable="@drawable/ic_date_nacimiento"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFechaNacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    />



            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pais"
            android:layout_marginTop="@dimen/padding_default16"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/actvPaises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default16"
            android:hint="@string/hint_lugarnacimiento"
            app:helperText="@string/help_requirido"
            app:startIconDrawable="@drawable/ic_place"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLugarNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete|textCapWords"
                android:maxLength="@integer/lugar_max_length"
                />



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default16"
            android:hint="@string/hint_notas"
            app:startIconDrawable="@drawable/ic_notes"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/notes_max_length"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="@integer/notes_max_length"
                />



        </com.google.android.material.textfield.TextInputLayout>







    </LinearLayout>

</ScrollView>